<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mainActivities.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="304dp"
                android:layout_height="30dp"
                android:text="@string/title"
                android:textAppearance="@style/title"
                android:lineSpacingExtra="1sp"
                android:translationY="-0.28sp"
                android:gravity="top"
                />
            <TextView
                android:id="@+id/icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="@string/icon"
                android:textAppearance="@style/icon"
                android:lineSpacingExtra="5sp"
                android:gravity="center_horizontal|center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="336dp"
                android:layout_height="30dp"
                android:text="username or Email"
                android:textAppearance="@style/title"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:layout_marginTop="30dp"
                android:gravity="top"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="336dp"
                android:layout_height="47dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:hint="Enter your username or email"
                android:background="@drawable/email_field"
                android:paddingLeft="10dp"
                />

            <TextView
                android:id="@+id/info"
                android:layout_width="336dp"
                android:layout_height="16dp"
                android:text="@string/info"
                android:textAppearance="@style/info"
                android:lineSpacingExtra="2sp"
                android:translationY="-0.97sp"
                android:gravity="top"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="336dp"
                android:layout_height="30dp"
                android:text="Password"
                android:textAppearance="@style/title"
                android:lineSpacingExtra="4sp"
                android:translationY="-1.8sp"
                android:layout_marginTop="20dp"
                android:gravity="top"
                />

            <EditText
                android:id="@+id/pass"
                android:layout_width="336dp"
                android:layout_height="47dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:hint="Enter tour password"
                android:inputType="textPassword"
                android:background="@drawable/email_field"
                android:paddingLeft="10dp"
                />

            <TextView
                android:layout_width="336dp"
                android:layout_height="16dp"
                android:text="Must contain at least one uppercase letter and one number"
                android:textAppearance="@style/info"
                android:lineSpacingExtra="2sp"
                android:translationY="-0.97sp"
                android:gravity="top"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-80dp">

            <Button
                android:id="@+id/seconday"
                android:layout_width="164dp"
                android:layout_height="42dp"
                android:layout_marginTop="100dp"
                android:text="Forgot Password?"
                android:background="@drawable/seconday" />

            <Button
                android:id="@+id/logbtn"
                android:layout_width="164dp"
                android:layout_height="42dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/primary"
                android:text="Log in"
                android:textColor="#FFFFFF"
                android:drawablePadding="8dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="258dp"
                android:layout_height="24dp"
                android:text="Don\'t have an account?"
                android:textAppearance="@style/title"
                android:lineSpacingExtra="3sp"
                android:translationY="-1.45sp"
                android:gravity="top"
                />

            <Button
                android:id="@+id/signPage"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:background="@drawable/button"
                android:text="sign up"
                android:drawableRight="@drawable/icon"
                />
        </LinearLayout>



    </LinearLayout>


</LinearLayout>